Card images blurry fixed. aragraph line height and margin fixed.

--- a/scss/App.scss
+++ b/scss/App.scss
@@ -101,6 +101,12 @@
     object-fit: cover;
     width: 100%;
   }
+
+  .attachment img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 }
 
 // Footer with custom background and text color
