--- a/scss/post.scss
+++ b/scss/post.scss
@@ -61,5 +61,10 @@
     padding-bottom: 1rem;
     padding-left: 2rem
   }
+
+  .post__content p {
+    margin-bottom: 2rem;
+    line-height: 1.7;
+  }
 }
 
